--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -4817,6 +4817,9 @@ a {
 .cid-AzQB7HCIWF H10 {
   color: #767676;
 }
+.cid-7koylwA1tj .hidden {
+  display: none;
+}
 .cid-ssVi9DDxkn {
   padding-top: 1rem;
   padding-bottom: 0rem;
