--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -99,10 +99,10 @@ body {
   background-color: #45ffa4 !important;
 }
 .bg-success {
-  background-color: #6592e6 !important;
+  background-color: #2000fd !important;
 }
 .bg-info {
-  background-color: #6592e6 !important;
+  background-color: #9c00ff !important;
 }
 .bg-warning {
   background-color: #6592e6 !important;
@@ -134,8 +134,8 @@ body {
 }
 .btn-secondary,
 .btn-secondary:active {
-  background-color: #6592e6 !important;
-  border-color: #6592e6 !important;
+  background-color: #0d1a41 !important;
+  border-color: #0d1a41 !important;
   color: #ffffff !important;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
 }
@@ -144,20 +144,20 @@ body {
 .btn-secondary.focus,
 .btn-secondary.active {
   color: #ffffff !important;
-  background-color: #2260d2 !important;
-  border-color: #2260d2 !important;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #2260d2 !important;
-  border-color: #2260d2 !important;
+  background-color: #000000 !important;
+  border-color: #000000 !important;
 }
 .btn-info,
 .btn-info:active {
-  background-color: #6592e6 !important;
-  border-color: #6592e6 !important;
+  background-color: #9c00ff !important;
+  border-color: #9c00ff !important;
   color: #ffffff !important;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
 }
@@ -166,20 +166,20 @@ body {
 .btn-info.focus,
 .btn-info.active {
   color: #ffffff !important;
-  background-color: #2260d2 !important;
-  border-color: #2260d2 !important;
+  background-color: #6700a8 !important;
+  border-color: #6700a8 !important;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .btn-info.disabled,
 .btn-info:disabled {
   color: #ffffff !important;
-  background-color: #2260d2 !important;
-  border-color: #2260d2 !important;
+  background-color: #6700a8 !important;
+  border-color: #6700a8 !important;
 }
 .btn-success,
 .btn-success:active {
-  background-color: #6592e6 !important;
-  border-color: #6592e6 !important;
+  background-color: #2000fd !important;
+  border-color: #2000fd !important;
   color: #ffffff !important;
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.2);
 }
@@ -188,15 +188,15 @@ body {
 .btn-success.focus,
 .btn-success.active {
   color: #ffffff !important;
-  background-color: #2260d2 !important;
-  border-color: #2260d2 !important;
+  background-color: #1500a6 !important;
+  border-color: #1500a6 !important;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2);
 }
 .btn-success.disabled,
 .btn-success:disabled {
   color: #ffffff !important;
-  background-color: #2260d2 !important;
-  border-color: #2260d2 !important;
+  background-color: #1500a6 !important;
+  border-color: #1500a6 !important;
 }
 .btn-warning,
 .btn-warning:active {
@@ -311,13 +311,13 @@ body {
 .btn-secondary-outline:active {
   background-color: transparent !important;
   border-color: transparent;
-  color: #6592e6;
+  color: #0d1a41;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
 .btn-secondary-outline.focus,
 .btn-secondary-outline.active {
-  color: #2260d2 !important;
+  color: #000000 !important;
   background-color: transparent!important;
   border-color: transparent!important;
   box-shadow: none!important;
@@ -325,20 +325,20 @@ body {
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #6592e6 !important;
-  border-color: #6592e6 !important;
+  background-color: #0d1a41 !important;
+  border-color: #0d1a41 !important;
 }
 .btn-info-outline,
 .btn-info-outline:active {
   background-color: transparent !important;
   border-color: transparent;
-  color: #6592e6;
+  color: #9c00ff;
 }
 .btn-info-outline:hover,
 .btn-info-outline:focus,
 .btn-info-outline.focus,
 .btn-info-outline.active {
-  color: #2260d2 !important;
+  color: #6700a8 !important;
   background-color: transparent!important;
   border-color: transparent!important;
   box-shadow: none!important;
@@ -346,20 +346,20 @@ body {
 .btn-info-outline.disabled,
 .btn-info-outline:disabled {
   color: #ffffff !important;
-  background-color: #6592e6 !important;
-  border-color: #6592e6 !important;
+  background-color: #9c00ff !important;
+  border-color: #9c00ff !important;
 }
 .btn-success-outline,
 .btn-success-outline:active {
   background-color: transparent !important;
   border-color: transparent;
-  color: #6592e6;
+  color: #2000fd;
 }
 .btn-success-outline:hover,
 .btn-success-outline:focus,
 .btn-success-outline.focus,
 .btn-success-outline.active {
-  color: #2260d2 !important;
+  color: #1500a6 !important;
   background-color: transparent!important;
   border-color: transparent!important;
   box-shadow: none!important;
@@ -367,8 +367,8 @@ body {
 .btn-success-outline.disabled,
 .btn-success-outline:disabled {
   color: #ffffff !important;
-  background-color: #6592e6 !important;
-  border-color: #6592e6 !important;
+  background-color: #2000fd !important;
+  border-color: #2000fd !important;
 }
 .btn-warning-outline,
 .btn-warning-outline:active {
@@ -458,13 +458,13 @@ body {
   color: #45ffa4 !important;
 }
 .text-secondary {
-  color: #6592e6 !important;
+  color: #0d1a41 !important;
 }
 .text-success {
-  color: #6592e6 !important;
+  color: #2000fd !important;
 }
 .text-info {
-  color: #6592e6 !important;
+  color: #9c00ff !important;
 }
 .text-warning {
   color: #6592e6 !important;
@@ -486,17 +486,17 @@ a.text-primary.active {
 a.text-secondary:hover,
 a.text-secondary:focus,
 a.text-secondary.active {
-  color: #205ac5 !important;
+  color: #000000 !important;
 }
 a.text-success:hover,
 a.text-success:focus,
 a.text-success.active {
-  color: #205ac5 !important;
+  color: #130097 !important;
 }
 a.text-info:hover,
 a.text-info:focus,
 a.text-info.active {
-  color: #205ac5 !important;
+  color: #5e0099 !important;
 }
 a.text-warning:hover,
 a.text-warning:focus,
@@ -541,7 +541,7 @@ a[class*="text-"]:not(.nav-link):not(.dropdown-item):not([role]):not(.navbar-cap
   background-color: #70c770;
 }
 .alert-info {
-  background-color: #6592e6;
+  background-color: #9c00ff;
 }
 .alert-warning {
   background-color: #6592e6;
@@ -576,11 +576,11 @@ a:hover {
 }
 .mbr-plan-header.bg-success .mbr-plan-subtitle,
 .mbr-plan-header.bg-success .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #d1caff;
 }
 .mbr-plan-header.bg-info .mbr-plan-subtitle,
 .mbr-plan-header.bg-info .mbr-plan-price-desc {
-  color: #ffffff;
+  color: #ebccff;
 }
 .mbr-plan-header.bg-warning .mbr-plan-subtitle,
 .mbr-plan-header.bg-warning .mbr-plan-price-desc {
@@ -591,8 +591,8 @@ a:hover {
   color: #ffffff;
 }
 /* Scroll to top button*/
-.scrollToTop_wraper {
-  display: none;
+#scrollToTop a {
+  border-radius: 100px;
 }
 .form-control {
   font-family: 'font';
@@ -668,7 +668,7 @@ blockquote {
 .xdsoft_datetimepicker .xdsoft_calendar td:hover,
 .xdsoft_datetimepicker .xdsoft_timepicker .xdsoft_time_box > div > div:hover {
   color: #ffffff !important;
-  background: #6592e6 !important;
+  background: #0d1a41 !important;
   box-shadow: none !important;
 }
 .lazy-bg {
@@ -4235,7 +4235,7 @@ a {
   color: #c1c1c1 !important;
 }
 .cid-7Kldw7U2Yz {
-  padding-top: 90px;
+  padding-top: 120px;
   padding-bottom: 90px;
 }
 .cid-7Kldw7U2Yz H2 {
@@ -4248,7 +4248,7 @@ a {
 }
 .cid-sp3UbVNKFY {
   display: flex;
-  background-image: url("../../../assets/images/untitled-artwork-2000x1414.jpg");
+  background-image: url("../../../assets/images/img-5330.png");
 }
 .cid-sp3UbVNKFY .mbr-overlay {
   background-color: #353535;
@@ -4265,7 +4265,7 @@ a {
     justify-content: flex-start;
   }
   .cid-sp3UbVNKFY .content-wrap {
-    width: 48%;
+    width: 33%;
   }
 }
 @media (max-width: 991px) and (min-width: 768px) {
@@ -4803,7 +4803,7 @@ a {
 }
 .cid-AzQB7HCIWF .progress-bar {
   height: 4px;
-  background: #4479d9;
+  background: #2000fd;
   width: 0%;
 }
 .cid-AzQB7HCIWF .sticky2 {
